--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ tasks.withType(JavaCompile) {
 
 application {
     mainModule = 'com.example.aventurasdemarcoyluis'
-    mainClass = 'com.example.aventurasdemarcoyluis.HelloApplication'
+    mainClass = 'com.example.aventurasdemarcoyluis.gui.GameApp'
 }
 
 javafx {
